# timing-utils

./: LICENSE  README.md  pyproject.toml
src/timing_utils/: __init__.py  timing.py
tests/: test_timing.py
